wp-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wp-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "wp.mycloudevopsdemo.tk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wp-vs
spec:
  hosts:
  - "wp.mycloudevopsdemo.tk"
  gateways:
  - wp-gw
  http:
    - route:
      - destination:
          host: wordpress
          port:
            number: 80
